projects/Media/docroot/assets/css/global/selfCredit.css
/* ... */
#selfCreditIssueReport .call-helpline, {
  font-style: italic;
}
#selfCreditIssueReport .meal-bundle-header .helpline-phone-number {
  color: #444444;
  font-weight: bold;
}
@media(max-width: 700px) {
  #selfCreditIssueReport .meal-bundle-header .helpline-phone-number {
    font-weight: normal;
    color: #408244;
    text-decoration: none;
  }
}
#selfCreditIssueReport.overlay-medium .self-credit-body .comment-container {
  margin-top: 20px;
}
#selfCreditIssueReport.overlay-medium
  .self-credit-body
  .comment-container
  label {
  font-size: 14px;
  font-weight: normal;
}
#selfCreditIssueReport.overlay-medium
  .self-credit-body
  .comment-container
  .comment-box {
  background: #eee;
  padding: 14px 18px;
  border-radius: 8px;
  font-size: 14px;
}
#selfCreditIssueReport.overlay-medium .self-credit-footer {
  overflow: auto;
  background: #f7f7f7;
}
#selfCreditIssueReport.overlay-medium .self-credit-footer .section-container {
  margin-top: 0;
  display: flex;
}
#selfCreditIssueReport.overlay-medium
  .self-credit-footer
  .section-container
  .sc-submit-button {
  margin-left: 15px;
  flex: 1 1 100%;
}
#selfCreditIssueReport.overlay-medium
  .self-credit-footer
  .section-container
  .sc-submit-button
  button {
  width: 100%;
}

#selfCreditIssueReport.overlay-medium
  .self-credit-footer
  .cssbutton.button-triangle {
  width: 255px;
}
#selfCreditIssueReport.overlay-medium
  .self-credit-footer
  .section-container
  .sc-edit-button {
  flex: 1 0 0;
}
#selfCreditIssueReport.overlay-medium .self-credit-footer .cssbutton {
  padding: 12px 30px;
}
@media (max-width: 500px) {
  #selfCreditIssueReport.overlay-medium #selfcreditform {
    height: 100%;
  }
  #selfCreditIssueReport.overlay-medium .overlay-container,
  #selfCreditIssueReport.overlay-medium .overlay-content {
    height: 100%;
    margin: 0;
  }
  #selfCreditIssueReport.overlay-medium .overlay-content {
    height: calc(100% - 50px);
  }
  #selfCreditIssueReport.overlay-medium .review {
    overflow: auto;
    height: 100%;
    display: flex;
    flex-direction: column;
  }
  #selfCreditIssueReport.overlay-medium .review .section-container {
    margin: 20px 20px 10px 20px;
    padding: 0;
  }
  #selfCreditIssueReport.overlay-medium .review .self-credit-body {
    flex: 1 1 auto;
    overflow: auto;
    padding-bottom: 15px;
  }
  #selfCreditIssueReport.overlay-medium .review .self-credit-header {
    flex: 0 1 0;
  }
  #selfCreditIssueReport.overlay-medium .review .self-credit-footer {
    flex: 0 0 70px;
    overflow: hidden;
    background: white;
    box-shadow: 0 -5px 20px rgba(0, 0, 0, 0.1);
    z-index: 5;
  }
  #selfCreditIssueReport.overlay-medium .review .self-credit-footer button {
    padding: 15px 30px;
    font-size: 15px;
  }
  #selfCreditIssueReport.overlay-medium
    .review
    .self-credit-footer
    .section-container {
    margin: 10px;
  }
  #selfCreditIssueReport .self-credit-form-alert {
    font-size: 13px;
  }
  #selfCreditIssueReport .meal-bundle-header .helpline-phone-number {
    text-decoration: underline;
  }
}

#selfCreditRequestComplete .overlay-content,
#selfCreditRequestError .overlay-content {
  text-align: center;
  padding: 40px 70px;
}

#selfCreditRequestError .overlay-content img {
  margin-bottom: 38px;
}

@media screen and (max-width: 700px) {
  #selfCreditRequestComplete .overlay-content, 
  #selfCreditRequestError .overlay-content {
    padding: 40px 0;
    box-shadow: none;
  }
}

#selfCreditRequestComplete .credit-request-submit {
  font-size: 22px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: 0.82;
  letter-spacing: 0.3px;
  text-align: center;
  color: #444;
  margin-top: 5px;
}

#selfCreditRequestComplete .status,
#selfCreditRequestError .status {
  font-size: 16px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.44;
  letter-spacing: normal;
  text-align: center;
  color: #444;
  margin: 20px 0 50px 0;
}

#selfCreditRequestError .status {
  margin: 20px 15px 50px;
}

#selfCreditRequestError .status a {
  display: block;
  color: black;
  font-weight: bold;
  width: fit-content;
  margin: 0 auto;
}

@media(max-width: 700px) {
  #selfCreditRequestError .status {
    margin: 0 0 50px;
  }
}

.selfcredit-overlay .spinner-overlay {
  display: none;
}

.selfcredit-overlay .spinner-overlay.active {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.7);
  overflow: hidden;
}
.selfcredit-overlay .spinner-overlay.active .spinner {
  display: block;
}

.selfcredit-overlay .spinner {
  border: 16px solid #f3f3f3;
  border-top: 16px solid #458b4c;
  border-radius: 50%;
  box-sizing: border-box;
  width: 120px;
  height: 120px;
  animation: spin 2s linear infinite;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: auto;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.selfcredit-overlay .aria-hidden {
  position: absolute !important;
  clip: rect(1px, 1px, 1px, 1px);
  padding: 0 !important;
  border: 0 !important;
  height: 1px !important;
  width: 1px !important;
  overflow: hidden;
}

.selfcredit-overlay .clearfix::after {
  content: "";
  clear: both;
  display: table;
}

.selfcredit-overlay .self-credit-init-row {
  margin-bottom: 23px;
}

.selfcredit-overlay .self-credit-init-row:first-child {
  margin-bottom: 16px;
}

.self-credit-init-row:first-child .user-info {
  text-transform: capitalize;
}

.selfcredit-overlay .self-credit-init-row-last {
  margin-bottom: 30px;
}

.selfcredit-overlay .self-credit-init-row-last + div {
  height: 48px;
}

.selfcredit-overlay .selfcredit-button {
  font-weight: bolder;
  padding: 15px 10px;
}

.selfcredit-overlay h1 {
  font-size: 24px;
  font-weight: bold;
  letter-spacing: 0.5px;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  margin-bottom: 30px;
}
/* ... */

